--- a/eShopEF/eShopEF.csproj
+++ b/eShopEF/eShopEF.csproj
@@ -11,6 +11,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Entities\**" />
+    <Compile Remove="Repository\**" />
+    <Compile Remove="Shared\**" />
+    <EmbeddedResource Remove="Entities\**" />
+    <EmbeddedResource Remove="Repository\**" />
+    <EmbeddedResource Remove="Shared\**" />
+    <None Remove="Entities\**" />
+    <None Remove="Repository\**" />
+    <None Remove="Shared\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.16">
       <PrivateAssets>all</PrivateAssets>
@@ -25,6 +37,7 @@
 
   <ItemGroup>
     <ProjectReference Include="Entities\Entities.csproj" />
+    <ProjectReference Include="Repository\Repository.csproj" />
   </ItemGroup>
 
 </Project>
