--- a/eShopEF/eShopWeb/appsettings.json
+++ b/eShopEF/eShopWeb/appsettings.json
@@ -9,5 +9,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=eShopV2;Integrated Security=True;"
+  },
+  "Auth": {
+    "key": "e$h0p_EF_MVC_K3Y",
+    "issuer": "http://localhost:5000",
+    "audience": "http://localhost:5000"
   }
 }
